--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 	<h4>Это заголовок</h4>
 	<p>Это <b>абзац</b></p>
 	<p>Это еще <em>абзац</em></p>
-	<h1>Это заголовок h1</h1> </div>
+	<h1>Это заголовок h1</h1> 
+</div>
 	<h1>Задание 2.</h1>
 <div style="border: 1px black dotted; width: 550px; height: 450px">
 	<h1>Что такое CMS</h1>
@@ -29,7 +30,7 @@
 	<p>
 		Бывают различные системы управления контентом: для интернет-магазинов, для блогов, для форумов и т.д.
 	</p>
-	<h2>Примеры cms</h2>
+		<h2>Примеры cms</h2>
 	<p>
 		<em>Примеры популярных CMS:</em> Joomla, WordPress (для блогов), PhpBB (для форумов).
 	</p>
@@ -37,5 +38,9 @@
 		<b>CMS-ки</b> бывают <em>платные</em> и <em>бесплатные.</em>
 	</p>
 </div>
+		<h1>Задание 3.</h1>
+	<div style="border: 1px #20B2AA solid; width: 550px; height: 450px">
+			
+	</div>
 </body>
 </html>
