--- a/index.html
+++ b/index.html
@@ -6,41 +6,77 @@
 	<title>Шалютин</title>
 </head>
 <body>
-Это моя первая страница
-<h1>Задание 1.</h1>
-<div style="border: 1px black dotted; width: 450px; height: 350px">
-	<h1>Это заголовок</h1>
-	<h2>Это заголовок</h2>
-	<h3>Это заголовок</h3>
-	<h4>Это заголовок</h4>
-	<p>Это <b>абзац</b></p>
-	<p>Это еще <em>абзац</em></p>
-	<h1>Это заголовок h1</h1> 
-</div>
-	<h1>Задание 2.</h1>
-<div style="border: 1px black dotted; width: 550px; height: 450px">
-	<h1>Что такое CMS</h1>
-	<p>
-		<b>CMS</b> - <<система управления контентом>> (<b>движок</b>) - написанная PHP-программистами основа для сайта, с помощью которой вы сможете управлять сайтом (добавлять контент, менять пункты меню и т.п.) не зная HTML и CSS.
-	</p>
-	<p>
-		Однако, для того чтобы сделать сайт с помощью <b>CMS</b> <em>потребуются услуги</em> и программиста, и дизайнера, и верстальщика. И капиталовложения.
-	</p>
-	<h2>Какие бывают cms</h2>
-	<p>
-		Бывают различные системы управления контентом: для интернет-магазинов, для блогов, для форумов и т.д.
-	</p>
-		<h2>Примеры cms</h2>
-	<p>
-		<em>Примеры популярных CMS:</em> Joomla, WordPress (для блогов), PhpBB (для форумов).
-	</p>
-	<p>
-		<b>CMS-ки</b> бывают <em>платные</em> и <em>бесплатные.</em>
-	</p>
-</div>
+	<!--Выполнил: Шалютин Андрей. ГБОУ СОШ 26. Группа 7. -->
+	Это моя первая страница
+	<h1>Задание 1.</h1>
+	<div style="border: 1px black dotted; width: 450px; height: 350px">
+		<h1>Это заголовок</h1>
+		<h2>Это заголовок</h2>
+		<h3>Это заголовок</h3>
+		<h4>Это заголовок</h4>
+		<p>Это <b>абзац</b></p>
+		<p>Это еще <em>абзац</em></p>
+		<h1>Это заголовок h1</h1> 
+	</div>
+		<h1>Задание 2.</h1>
+	<div style="border: 1px black dotted; width: 550px; height: 450px">
+		<h1>Что такое CMS</h1>
+		<p>
+			<b>CMS</b> - <<система управления контентом>> (<b>движок</b>) - написанная PHP-программистами основа для сайта, с помощью которой вы сможете управлять сайтом (добавлять контент, менять пункты меню и т.п.) не зная HTML и CSS.
+		</p>
+		<p>
+			Однако, для того чтобы сделать сайт с помощью <b>CMS</b> <em>потребуются услуги</em> и программиста, и дизайнера, и верстальщика. И капиталовложения.
+		</p>
+		<h2>Какие бывают cms</h2>
+		<p>
+			Бывают различные системы управления контентом: для интернет-магазинов, для блогов, для форумов и т.д.
+		</p>
+			<h2>Примеры cms</h2>
+		<p>
+			<em>Примеры популярных CMS:</em> Joomla, WordPress (для блогов), PhpBB (для форумов).
+		</p>
+		<p>
+			<b>CMS-ки</b> бывают <em>платные</em> и <em>бесплатные.</em>
+		</p>
+	</div>
 		<h1>Задание 3.</h1>
-	<div style="border: 1px #20B2AA solid; width: 550px; height: 450px">
-			
+	<div style="border: 1px blue solid; width: 500px; height: 700px; box-shadow: 15px 15px 15px 20px grey;">
+		<h2>Списки</h2>
+		<h3>Списки цветов</h3>
+		<ul>
+			<li>Синий</li>
+			<li>Красный</li>
+			<li>Желтый</li>
+			<li>Зеленый</li>
+		</ul>
+		<h3>Списки студентов</h3>
+		<ol>
+			<li>Иванов</li>
+			<li>Петров</li>
+			<li>Сидоров</li>
+			<li>Николаев</li>
+		</ol>
+		<h3>Список студентов</h3>
+		<ol>
+			<li>Иванов
+				<ul>
+					<li>Возраст - 23 года</li>
+					<li>Курс - 3</li>
+				</ul>
+			</li>
+			<li>Петров
+				<ul>
+					<li>Возраст - 19 лет</li>
+					<li>Курс - 2</li>
+				</ul>
+			</li>
+			<li>Сидров
+				<ul>
+					<li>Возраст - 18 Лет</li>
+					<li>Курс - 1</li>
+				</ul>
+			</li>
+		</ol>
 	</div>
 </body>
 </html>
