--- a/Login.html
+++ b/Login.html
@@ -4,13 +4,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<title>Главная</title>
+	<title>Авторизация</title>
 </head>
 <body>
-	<header>
-		<div class="headers">
-			<button class="kno"><a href="Login.html"><em>Вход</em></b></button>
-		</div>
-	</header>
+	<form class="forms">
+		<p><input type="text" placeholder="Логин"></p>
+		<p><input type="password" placeholder="Пароль"></p>
+		<button>Войти</button>
+	</form>
 </body>
 </html>
