--- a/vhod.html
+++ b/vhod.html
@@ -17,7 +17,7 @@
 				<input type="password" placeholder="пароль" maxlength="33" style="padding: 5px; margin: 7px; width: 200px;">
 			</div>
 			<button style="border: none; background: rgb(176 196 222); color: red;border-radius: 5px; width: 70px; height: 25px; position: absolute; margin: 0px 75px 0px 75px;">Войти</button>
-			<p style=" left: 7px; margin: 18px 0px 0px 15px; padding: 15px 0px 0px 0px; text-align: center; font-size: 18px; width: 200px;"><a href="register.html"><em>Не зарегистрированы?</em></a></p>
+			<p style=" left: 7px; margin: 18px 0px 0px 15px; padding: 15px 0px 0px 0px; text-align: center; font-size: 18px; width: 200px;"><a href="index.html"><em>Не зарегистрированы?</em></a></p>
 		</div>
 	</form>
 </body>
