--- a/Frak/FBI/vopFBI.html
+++ b/Frak/FBI/vopFBI.html
@@ -71,6 +71,12 @@
 			<ul><li>Запрещен.</li></ul><br>
 			<li>Сколько минимум тем должно быть на форуме?</li>
 			<ul><li>Руководство Фракции</li> <li>Система повышения</li><li>FAQ - помощь по фракции</li></ul><br>
+			<li>Какой срок Нахождения на лидерстве государственной организации?</li>
+			<ul><li>30 Дней.</li></ul><br>
+			<li>Что будет лидеру за принятие игрока который в ЧС?</li>
+			<ul><li>строгий выговор.</li></ul><br>
+			<li>Сколько дней есть у лидера на заполнение форума?</li>
+			<ul><li>3 Дня.</li></ul>
 		</ol>
 
 		<div class="nams"><center>ГОСУДАРСТВЕННАЯ ВОЛНА</center></div>
@@ -102,8 +108,145 @@
 				<li>Разрешена реклама переводов/отрядов/отделов.</li>
 			</ul><br>
 			<li>Расскажите тэг своей государственной организации.</li>
-			<ul><li>FBI</li></ul>
+			<ul><li>FBI</li></ul><br>
+			<li>С какого уровня возможен прием в вашу организацию?</li>
+			<ul><li>8 lvl</li></ul>
 		</ol>
+<!-- ---------------------------------------------------------------->
+
+		<div class="nams"><center>ПАТРУЛИРОВАНИЕ В ОПАСНОМ РАЙОНЕ</center></div>
+
+		<ol>
+			<li>Расскажите Правила Патрулирования в Опасном Районе.</li>
+			<ul>
+				<li>Офицеру запрещено заезжать на территорию гетто, если там ведётся война за территорию между бандами.</li>
+				<li>Офицеру ПД строго запрещёно заезжать в опасный район одному (без напарника) для патрулирования или проведения каких либо оперативно-розыскных мероприятий.</li>
+				<li>Офицеру ПД строго запрещено заезжать в опасный район на служебном мотоцикле.</li>
+				<li>Во время нахождение в опасном районе в патрульном авто должно находится минимум два Офицера Полицейского Департманта.</li>
+				<li>В том случае, если во время нахождении в опасном районе был потерян напарник, то необходимо сразу же покинуть территорию. Исключение: Разрешено продолжать патрулирование в том случае, если в служебном авто осталось как минимум два сотрудника.</li>
+				<li>Офицеру ПД категорически запрещается выезжать в патруль по Опасному району без необходимой оснащенности: ( М4, Deagle, Бронежилет, дубинка, маска).</li>
+				<li>Если бандит/обычный гражданин в гетто скрылся в одну из баз, то вы должны убедиться в том, что его дальнейшее преследование не приведет к нарушению правил сервера (Powergaming). Если же вы не уверены в этом, то рекомендуется прекратить погоню и объявить в преступника в Федеральный розыск (/su) для поимки в дальнейшем.</li>
+			</ul>
+		</ol>
+
+		<div class="nams"><center>ПРАВИЛА ПРИЕМА И СИСТЕМА ПЕРЕВОДОВ</center></div>
+
+		<ol>
+			<li>Расскажите правила переводов между государственными организациями.</li>
+			<ul>
+				<li>Army » Police Department. // Police Department » Army. // Police Department » Police Department.</li><br>
+				<li>Army » Police Department.
+					<ul>
+						<li>Сержант »» Курсант</li>
+						<li>Прапорщик »» Офицер I</li>
+						<li>Младший Лейтенант »» Офицер II</li>	
+						<li>Лейтенант »» Старший офицер</li>
+						<li>Старший Лейтенант »» Сержант I</li>
+						<li>Капитан »» Сержант II</li>
+						<li>Майор »» Детектив I</li>
+						<li>Подполковник »» Детектив II</li>
+						<li>Полковник »» Лейтенант</li>
+						<li>Генерал »» По согласованию с администрацией</li><br>
+				</ul>
+				<li>Police Department » Army</li>
+				<ul>
+					<li>Старший офицер »» Младший Сержант</li>
+					<li>Сержант I »» Сержант</li>
+					<li>Сержант II »» Сержант</li>
+					<li>Детектив I »» Прапорщик</li>
+					<li>Детектив II »» Прапорщик</li>
+					<li>Лейтенант »» Младший Лейтенант</li>
+					<li>Капитан »» Лейтенант</li>
+					<li>Майор »» Старший Лейтенант</li>
+					<li>Заместитель Шерифа »» Капитан</li>
+					<li>Шериф »» По согласованию с администрацией</li><br>
+				</ul>
+				<li>Police Department » Police Department</li>
+				<ul>
+					<li>Офицер II »» Офицер I</li>
+					<li>Старший офицер »» Офицер II</li>
+					<li>Сержант I »» Старший офицер</li>
+					<li>Сержант II »» Старший офицер</li>
+					<li>Детектив I »» Сержант I</li>
+					<li>Детектив II »» Сержант II</li>
+					<li>Лейтенант »» Детектив I</li>
+					<li>Капитан »» Детектив II</li>
+					<li>Майор »» Лейтенант</li>
+					<li>Заместитель Шерифа »» Капитан</li>
+					<li>Шериф »» По согласованию с администрацией</li><br>
+				</ul>
+				<li>Federal Bureau of Investigation » Police Department</li>
+				<ul>
+					<li>Младший агент »» Старший офицер</li>
+					<li>Агент »» Сержант I</li>
+					<li>Старший агент »» Сержант II</li>
+					<li>Инспектор »» Детектив I</li>
+					<li>Ректор академии »» Детектив II</li>
+					<li>Глава Отдела CID »» Лейтенант</li>
+					<li>Глава отдела JTTF »» Лейтенант</li>
+					<li>Глава отдела DEP »» Лейтенант</li>
+					<li>Заместитель Директора »» Капитан</li>
+					<li>Директор »» По согласованию с администрацией</li><br>
+				</ul>
+				<li>Federal Bureau of Investigation » Army</li>
+				<ul>
+					<li>Агент »» Прапорщик</li>
+					<li>Старший агент »» Младший Лейтенант</li>
+					<li>Инспектор »» Лейтенант</li>
+					<li>Ректор академии »» Старший Лейтенант</li>
+					<li>Глава Отдела CID »» Капитан</li>
+					<li>Глава отдела JTTF »» Капитан</li>
+					<li>Глава отдела DEP »» Капитан</li>
+					<li>Заместитель Директора »» Майор</li>
+					<li>Директор »» По согласованию с администрацией</li><br>
+				</ul>
+			</ul>
+		</ol>
+
+		<div class="nams"><center>РЕГЛАМЕНТАЦИЯ ДЕЯТЕЛЬНОСТИ</center></div>
+
+		<ol>
+			<li>Кто из вашей отрганизации имеет право находиться на территории армии?</li>
+			<ul>
+				<li>Агенты FBI в должности Агент и выше (4+ ранги)</li>
+				<li>Агенты FBI в должности Зам. Директора/Директор FBI</li>
+				<li>Агенты FBI в должности Агент и выше (4+ранги) имеют право заезжать на территорию части только для проведения следственно-розыскных мероприятий и только с разрешения старших офицеров Армии.</li>
+			</ul>
+		</ol>
+
+		<div class="nams"><center>УГОЛОВНЫЙ КОДЕКС ШТАТА</center></div>
+
+		<ol>
+			<li>Пройдемся по Уголовному Кодексу</li>
+			<ul>
+				<li>Какой уровень розыска будет за взяточничество?</li>
+				<ul><li>5.2. ВЗЯТОЧНИЧЕСТВО</li></ul>
+				<li>Какой уровень розыска будет за порчу чужого имущества?</li>
+				<ul><li>2.2. ПОРЧА/УНИЧТОЖЕНИЕ ИМУЩЕСТВА</li></ul>
+				<li>Какой уровень розыска будет за употребление наркотиков?</li>
+				<ul><li>2.6. УПОТРЕБЛЕНИЕ НАРКОТИЧЕСКИХ СРЕДСТВ</li></ul>
+				<li>Что такое ЧСП?</li>
+				<ul><li>ЧИСТОСЕРДЕЧНОЕ ПРИЗНАНИЕ</li></ul>
+			</ul><br>
+			<li>Теперь по Административному Кодексу</li>
+			<ul>
+				<li>Какой штраф За парковку в неположенном месте?</li>
+				<ul><li>Штраф: 5.000$</li></ul>
+				<li>Какое наказание За посадку воздушного транспорта в неположенном месте?</li>
+				<ul><li>Штраф: 30.000$ и изъятие лицензии на воздушный транспорт.</li></ul>
+			</ul>
+		</ol>
+
+		<div class="nams"><center>ДОЛЖНОСТНАЯ СТРУКТУРА</center></div>
+
+		<ul>
+			<li>Инспектор — 3</li>
+			<li>Ректор академии — 1</li>
+			<li>Глава отдела CID — 1</li>
+			<li>Глава отдела JTTF — 1</li>
+			<li>Глава отдела DEP — 1</li>
+			<li>Зам директора — 2</li>
+		</ul>
 
 
 
