--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
 	</section>
 	<section>
 		<div>
-			<a href="https://forum.gta-mobile.ru/threads/23118/" target="_blank">NEVADA | Уголовный Кодекс</a>
+			<a href="https://forum.gta-mobile.ru/threads/23118/" target="_blank">Уголовный Кодекс</a>
 		</div>
 	</section>
 	<section>
 		<div>
-			<a href="https://forum.gta-mobile.ru/threads/20760/" target="_blank">NEVADA | Административный Кодекс</a>
+			<a href="https://forum.gta-mobile.ru/threads/20760/" target="_blank">Административный Кодекс</a>
 		</div>
 	</section>
 	<section>
 		<div>
-			<a href="https://forum.gta-mobile.ru/threads/22638/" target="_blank">NEVADA | Федеральное Постановление</a>
+			<a href="https://forum.gta-mobile.ru/threads/22638/" target="_blank">Федеральное Постановление</a>
 		</div>
 	</section>
 </body>
