--- a/Frak/vop.html
+++ b/Frak/vop.html
@@ -44,7 +44,31 @@
 		</div>
 	</section>
 
+	<div class="nam">
+		<center>ПОЛЕЗНАЯ ИНФОРМАЦИЯ.</center>	
+	</div>
 
+	<section>
+		<div>
+			<a href="https://docs.google.com/spreadsheets/d/1TL9lG4KXOtm9xS285liXJZUanIWuyNlOkfd0NqTqtow/edit?usp=sharing" target="_blank">Таблица лидеров</a>
+		</div>
+	</section>
+
+	<div class="nam">
+		<center>ПОЛЕЗНОЕ</center>	
+	</div>
+
+	<section>
+		<div>
+			<a href="../DRY/yk.html">Уголовный Кодекс</a>
+		</div>
+	</section>
+
+	<section>
+		<div>
+			<a href="../DRY/AK.html">Административный Кодекc</a>
+		</div>
+	</section>
 
 </body>
 </html>
