--- a/index.html
+++ b/index.html
@@ -28,11 +28,6 @@
 			<a href="Frak/vop.html">Вопросы для обзвона</a>
 		</div>
 	</section>
-	<section>
-		<div>
-			<a href="#">Помощь на обзвоне</a>
-		</div>
-	</section>
 	<div class="nam">
 		<center>ПРОЧАЯЯ ИНФОРМАЦИЯ</center>	
 	</div>
@@ -43,7 +38,7 @@
 	</section>
 	<section>
 		<div>
-			<a href="https://forum.gta-mobile.ru/forums/381/" target="_blank">правила/законопроекты/регламенты</a>
+			<a href="https://forum.gta-mobile.ru/forums/381/" target="_blank">правила, законопроекты</a>
 		</div>
 	</section>
 	<section>
