--- a/Frak/FBI/vopFBI.html
+++ b/Frak/FBI/vopFBI.html
@@ -206,7 +206,7 @@
 		<div class="nams"><center>РЕГЛАМЕНТАЦИЯ ДЕЯТЕЛЬНОСТИ</center></div>
 
 		<ol>
-			<li>Кто из вашей отрганизации имеет право находиться на территории армии?</li>
+			<li>Кто из вашей организации имеет право находиться на территории армии?</li>
 			<ul>
 				<li>Агенты FBI в должности Агент и выше (4+ ранги)</li>
 				<li>Агенты FBI в должности Зам. Директора/Директор FBI</li>
@@ -247,9 +247,18 @@
 			<li>Глава отдела DEP — 1</li>
 			<li>Зам директора — 2</li>
 		</ul>
+
+		<div class="nams"><center>ДПРАВИЛА ПОВЫШЕНИЯ СОТРУДНИКОВ</center></div>
+
+		<ol>
+			<li>Расскажите Правила повышений сотрудников.</li>
+			<ul><li>Ученик академии [1]</li><ul><li>имеют право повысится на следующий день после призыва сдав необходимые тесты и данные ему задачи.</li></ul></ul>
+			<ul><li>Стажер [2] - Младший агент [3]</li><ul><li>(включительно) повышаются не чаще, чем один раз в три дня.</li></ul></ul>
+			<ul><li>Младший агент [3] - Старший Агент [5]</li><ul><li>(включительно) повышаются не чаще, чем один раз в пять дней.</li></ul></ul>
+			<ul><li>Инспектор [6] - Глава отдела DEP [10]</li><ul><li>(включительно) повышаются не чаще, чем один раз в семь дней.</li></ul></ul>
+			<ul><li>Зам. Директор [11]</li><ul><li>(включительно) повышаются не чаще, чем один раз в десять дней.</li></ul></ul>
+		</ol>
+
 	</div>
-
-
-
 </body>
 </html>
