--- a/Frak/SAPD/vopSAPD.html
+++ b/Frak/SAPD/vopSAPD.html
@@ -18,9 +18,9 @@
 		</div>
 	</footer>
 <!-- ---------------------------------------------------------------->
-
-	<div class="nam">
-		<center>Полицейский департамент</center>	
+	
+		<div class="nam">
+		<center>Министерство Юстиции</center>	
 	</div>
 
 	<div class="nam">
@@ -71,6 +71,12 @@
 			<ul><li>Запрещен.</li></ul><br>
 			<li>Сколько минимум тем должно быть на форуме?</li>
 			<ul><li>Руководство Фракции</li> <li>Система повышения</li><li>FAQ - помощь по фракции</li></ul><br>
+			<li>Какой срок Нахождения на лидерстве государственной организации?</li>
+			<ul><li>30 Дней.</li></ul><br>
+			<li>Что будет лидеру за принятие игрока который в ЧС?</li>
+			<ul><li>строгий выговор.</li></ul><br>
+			<li>Сколько дней есть у лидера на заполнение форума?</li>
+			<ul><li>3 Дня.</li></ul>
 		</ol>
 
 		<div class="nams"><center>ГОСУДАРСТВЕННАЯ ВОЛНА</center></div>
@@ -102,20 +108,150 @@
 				<li>Разрешена реклама переводов/отрядов/отделов.</li>
 			</ul><br>
 			<li>Расскажите тэг своей государственной организации.</li>
-			<ul><li>LSPD</li>
-				<li>SFPD</li>
-				<li>LVPD</li>
+			<ul><li>LSPD</li></ul>
+			<ul><li>SFPD</li></ul>
+			<ul><li>LVPD</li></ul><br>
+			<li>С какого уровня возможен прием в вашу организацию?</li>
+			<ul><li>5 lvl</li></ul>
+		</ol>
+<!-- ---------------------------------------------------------------->
+
+
+		<div class="nams"><center>ПАТРУЛИРОВАНИЕ В ОПАСНОМ РАЙОНЕ</center></div>
+
+		<ol>
+			<li>Расскажите Правила Патрулирования в Опасном Районе.</li>
+			<ul>
+				<li>Офицеру запрещено заезжать на территорию гетто, если там ведётся война за территорию между бандами.</li>
+				<li>Офицеру ПД строго запрещёно заезжать в опасный район одному (без напарника) для патрулирования или проведения каких либо оперативно-розыскных мероприятий.</li>
+				<li>Офицеру ПД строго запрещено заезжать в опасный район на служебном мотоцикле.</li>
+				<li>Во время нахождение в опасном районе в патрульном авто должно находится минимум два Офицера Полицейского Департманта.</li>
+				<li>В том случае, если во время нахождении в опасном районе был потерян напарник, то необходимо сразу же покинуть территорию. Исключение: Разрешено продолжать патрулирование в том случае, если в служебном авто осталось как минимум два сотрудника.</li>
+				<li>Офицеру ПД категорически запрещается выезжать в патруль по Опасному району без необходимой оснащенности: ( М4, Deagle, Бронежилет, дубинка, маска).</li>
+				<li>Если бандит/обычный гражданин в гетто скрылся в одну из баз, то вы должны убедиться в том, что его дальнейшее преследование не приведет к нарушению правил сервера (Powergaming). Если же вы не уверены в этом, то рекомендуется прекратить погоню и объявить в преступника в Федеральный розыск (/su) для поимки в дальнейшем.</li>
 			</ul>
 		</ol>
 
+		<div class="nams"><center>ПРАВИЛА ПРИЕМА И СИСТЕМА ПЕРЕВОДОВ</center></div>
 
+		<ol>
+			<li>Расскажите правила переводов в вашу фракцию.</li>
+			<ul>
+				<li>Army » Police Department. // Police Department » Army. // Police Department » Police Department.</li><br>
+				<li>Army » Police Department.
+					<ul>
+						<li>Сержант »» Курсант</li>
+						<li>Прапорщик »» Офицер I</li>
+						<li>Младший Лейтенант »» Офицер II</li>	
+						<li>Лейтенант »» Старший офицер</li>
+						<li>Старший Лейтенант »» Сержант I</li>
+						<li>Капитан »» Сержант II</li>
+						<li>Майор »» Детектив I</li>
+						<li>Подполковник »» Детектив II</li>
+						<li>Полковник »» Лейтенант</li>
+						<li>Генерал »» По согласованию с администрацией</li><br>
+				</ul>
+				<li>Police Department » Army</li>
+				<ul>
+					<li>Старший офицер »» Младший Сержант</li>
+					<li>Сержант I »» Сержант</li>
+					<li>Сержант II »» Сержант</li>
+					<li>Детектив I »» Прапорщик</li>
+					<li>Детектив II »» Прапорщик</li>
+					<li>Лейтенант »» Младший Лейтенант</li>
+					<li>Капитан »» Лейтенант</li>
+					<li>Майор »» Старший Лейтенант</li>
+					<li>Заместитель Шерифа »» Капитан</li>
+					<li>Шериф »» По согласованию с администрацией</li><br>
+				</ul>
+				<li>Police Department » Police Department</li>
+				<ul>
+					<li>Офицер II »» Офицер I</li>
+					<li>Старший офицер »» Офицер II</li>
+					<li>Сержант I »» Старший офицер</li>
+					<li>Сержант II »» Старший офицер</li>
+					<li>Детектив I »» Сержант I</li>
+					<li>Детектив II »» Сержант II</li>
+					<li>Лейтенант »» Детектив I</li>
+					<li>Капитан »» Детектив II</li>
+					<li>Майор »» Лейтенант</li>
+					<li>Заместитель Шерифа »» Капитан</li>
+					<li>Шериф »» По согласованию с администрацией</li><br>
+				</ul>
+				<li>Federal Bureau of Investigation » Police Department</li>
+				<ul>
+					<li>Младший агент »» Старший офицер</li>
+					<li>Агент »» Сержант I</li>
+					<li>Старший агент »» Сержант II</li>
+					<li>Инспектор »» Детектив I</li>
+					<li>Ректор академии »» Детектив II</li>
+					<li>Глава Отдела CID »» Лейтенант</li>
+					<li>Глава отдела JTTF »» Лейтенант</li>
+					<li>Глава отдела DEP »» Лейтенант</li>
+					<li>Заместитель Директора »» Капитан</li>
+					<li>Директор »» По согласованию с администрацией</li><br>
+				</ul>
+			</ul>
+		</ol>
 
+		<div class="nams"><center>РЕГЛАМЕНТАЦИЯ ДЕЯТЕЛЬНОСТИ</center></div>
 
+		<ol>
+			<li>Кто из вашей организации имеет право находиться на территории армии?</li>
+			<ul>
+				<li>Офицеры SAPD имеют право заезжать на территорию армии при погонях за преступником, после которой они обязаны уехать.</li>
+				<li>Офицеры SAPD в должности Заместитель Шерифа/Шериф имеют право заезжать на территорию части для проведения набора, предварительно оповестив об этом старших офицеров Армии и получив разрешение на данное действие.</li>
+			</ul>
+			<li>Какие аксессуары запрещено носить?</li>
+			<ul>
+				<li>Запрещается носить вызвывающие аксессуары ярких цветов на рабочей смене.</li>
+				<ul><li>Исключение: Любые Береты для различения бойцов по взводам, отделам.</li></ul>
+				<li>Запрещено надевать аксессуары во время рабочего дня которые не задокументированны в списке разрешенны аксессуаров. (Наказание Федеральное Постановление п. 2.18).</li>
+				<li>Руководство организации имеет право установить обязательные к ношению аксессуары не нарушая п.1.</li>
+			</ul>
+		</ol>
 
+				<div class="nams"><center>УГОЛОВНЫЙ КОДЕКС ШТАТА</center></div>
+
+		<ol>
+			<li>Пройдемся по Уголовному Кодексу</li>
+			<ul>
+				<li>Какой уровень розыска будет за взяточничество?</li>
+				<ul><li>5.2. ВЗЯТОЧНИЧЕСТВО</li></ul>
+				<li>Какой уровень розыска будет за порчу чужого имущества?</li>
+				<ul><li>2.2. ПОРЧА/УНИЧТОЖЕНИЕ ИМУЩЕСТВА</li></ul>
+				<li>Какой уровень розыска будет за употребление наркотиков?</li>
+				<ul><li>2.6. УПОТРЕБЛЕНИЕ НАРКОТИЧЕСКИХ СРЕДСТВ</li></ul>
+				<li>Что такое ЧСП?</li>
+				<ul><li>ЧИСТОСЕРДЕЧНОЕ ПРИЗНАНИЕ</li></ul>
+			</ul><br>
+			<li>Теперь по Административному Кодексу</li>
+			<ul>
+				<li>Какой штраф За парковку в неположенном месте?</li>
+				<ul><li>Штраф: 5.000$</li></ul>
+				<li>Какое наказание За посадку воздушного транспорта в неположенном месте?</li>
+				<ul><li>Штраф: 30.000$ и изъятие лицензии на воздушный транспорт.</li></ul>
+			</ul>
+		</ol>
+
+		<div class="nams"><center>ДОЛЖНОСТНАЯ СТРУКТУРА</center></div>
+
+		<ul>
+			<li>Майор — 3</li>
+			<li>Зам. шефа — 2</li>
+		</ul>
+
+		<div class="nams"><center>ДПРАВИЛА ПОВЫШЕНИЯ СОТРУДНИКОВ</center></div>
+
+		<ol>
+			<li>Расскажите Правила повышений сотрудников.</li>
+			<ul><li>Курсант [1]</li><ul><li>имеют право повысится на следующий день после призыва сдав необходимые тесты и данные ему задачи.</li></ul></ul>
+			<ul><li>Офицер I [2] - Сержант I [5]</li><ul><li>(включительно) повышаются не чаще, чем один раз в два дня.</li></ul></ul>
+			<ul><li>Сержант I [5] - Детектив II [8]</li><ul><li>(включительно) повышаются не чаще, чем один раз в пять дней.</li></ul></ul>
+			<ul><li>Детектив I [8] - Капитан [10]</li><ul><li>(включительно) повышаются не чаще, чем один раз в неделю.</li></ul></ul>
+			<ul><li>Капита [10] - Зам. Шефа [12]</li><ul><li>(включительно) повышаются не чаще, чем один раз в десять дней.</li></ul></ul>
+		</ol>
 
 	</div>
-
-
-
 </body>
 </html>
