--- a/Frak/ARMY/vopARMY.html
+++ b/Frak/ARMY/vopARMY.html
@@ -6,6 +6,26 @@
 	<link rel="stylesheet" type="text/css" href="../../style.css">
 	<title>Главная</title>
 </head>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script type="text/javascript">
+$(document).ready(function(){
+ 
+$(window).scroll(function(){
+if ($(this).scrollTop() > 100) {
+$('.scrollup').fadeIn();
+} else {
+$('.scrollup').fadeOut();
+}
+});
+ 
+$('.scrollup').click(function(){
+$("html, body").animate({ scrollTop: 0 }, 600);
+return false;
+});
+ 
+});
+</script>
+<a href="#" class="scrollup">Наверх</a>
 <body>
 	<header>
 		<div>
