--- a/index.html
+++ b/index.html
@@ -24,15 +24,28 @@
 		</nav>
 	</footer>
 	<!-- Нет подвала -->
+<!-- КОД -->
+<!--  <div class="razd"><span class="sp-razd"> Название темя<a href="#">sd</a></span></div> Название темы -->
+<!--  <div class="lins"><a href="#" class="linss">Переход на след тему</a></div>   Переход на другие темы -->
+<!--  <div class="ct"><div class="z-ct"><center>Заголовок</center></div> <div class="d-ct"> 
+	<div class="z-ct-1"><center>Заголовок-2</center></div>
+		Текст
+	<div class="z-ct-1"><center></center></div> 
+		Текст
+	</div></div> -->
+<!-- КОД -->
 
 	<div class="razd"><span class="sp-razd"> Название темя<a href="#">sd</a></span></div>
 	<div class="lins"><a href="#" class="linss">Переход на след тему</a></div>
-		<div class="ct"><div class="z-ct"><center>Важное</center></div> <div class="d-ct"> 
-<div class="z-ct-1"><center>Важное</center></div>
-Текст
+	<div class="ct"><div class="z-ct"><center>Важное</center></div> <div class="d-ct"> 
+	<div class="z-ct-1"><center>Важное</center></div>
+		Текст
+		
 
-<div class="z-ct-1"><center>Важное</center></div>
-	</div></div>
+	<div class="z-ct-1"><center>Важное</center></div>
+		Текст
+
+	 </div></div>
 			
 
 
