--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
 	</div></div> -->
 <!-- КОД -->
 
-	<div class="razd"><span class="sp-razd"> Название темя<a href="#">sd</a></span></div>
-	<div class="lins"><a href="#" class="linss">Переход на след тему</a></div>
+	
+	<div class="razd"><div class="d-razd"><center>Название раздела</center></div><div class="dd-razd"><span class="s-razd"><a href="#">Текст</a> </span></div><div class="dd-razd"><span class="s-razd">Текст</span></div><div class="dd-razd"><span class="s-razd">Текст</span></div></div>
+
+
+
 	<div class="ct"><div class="z-ct"><center>Важное</center></div> <div class="d-ct"> 
 	<div class="z-ct-1"><center>Важное</center></div>
 		Текст
