--- a/index.html
+++ b/index.html
@@ -25,29 +25,30 @@
 	</footer>
 	<!-- Нет подвала -->
 <!-- КОД -->
-<!--  <div class="razd"><span class="sp-razd"> Название темя<a href="#">sd</a></span></div> Название темы -->
-<!--  <div class="lins"><a href="#" class="linss">Переход на след тему</a></div>   Переход на другие темы -->
-<!--  <div class="ct"><div class="z-ct"><center>Заголовок</center></div> <div class="d-ct"> 
-	<div class="z-ct-1"><center>Заголовок-2</center></div>
+<!--  
+		<div class="razd"><div class="d-razd"><center>Название раздела</center></div><div class="dd-razd"><span class="s-razd"><a href="#">Текст</a> </span></div>></div>
+		
+		<div class="ct"><div class="z-ct"><center>Важное</center></div> <div class="d-ct"> 
 		Текст
-	<div class="z-ct-1"><center></center></div> 
+	<div class="z-ct-1"><center>Важное</center></div>
 		Текст
-	</div></div> -->
+	<div class="z-ct-1"><center>Важное</center></div>
+		Текст
+	 </div></div>
+-->
 <!-- КОД -->
 
 	
-	<div class="razd"><div class="d-razd"><center>Название раздела</center></div><div class="dd-razd"><span class="s-razd"><a href="#">Текст</a> </span></div><div class="dd-razd"><span class="s-razd">Текст</span></div><div class="dd-razd"><span class="s-razd">Текст</span></div></div>
+	<div class="razd"><div class="d-razd"><center>Название раздела</center></div><div class="dd-razd"><span class="s-razd"><a href="#">Текст</a> </span></div></div>
 
 
 
 	<div class="ct"><div class="z-ct"><center>Важное</center></div> <div class="d-ct"> 
+		Текст
 	<div class="z-ct-1"><center>Важное</center></div>
 		Текст
-		
-
 	<div class="z-ct-1"><center>Важное</center></div>
 		Текст
-
 	 </div></div>
 			
 
