--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<header>
 		<nav class="header_nav">
 			<div class="header-div">
-				<div class="zz"><a href="/"><span style="font-size: 24px; color: #8A2BE2; text-decoration: none;"><b>Lead</b></span><span style="font-size: 19px; color: #1E90FF; text-decoration: none;">Help</span></a></div>
+				<div class="zz"><a href="index.html"><span style="font-size: 24px; color: #8A2BE2; text-decoration: none;"><b>Lead</b></span><span style="font-size: 19px; color: #1E90FF; text-decoration: none;">Help</span></a></div>
 			</div>
 		</nav>
 	</header>
