--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 <!-- КОД -->
 
 	
-	<div class="razd"><div class="d-razd"><center>Название раздела</center></div><div class="dd-razd"><span class="s-razd"><a href="#">Текст</a> </span></div></div>
+	<div class="razd"><div class="d-razd"><center>Название раздела</center></div><div class="dd-razd"><span class="s-razd"><a href="#">Текст</a></span></div><div class="dd-razd"><span class="s-razd"><a href="#">Текст</a></span></div></div>
+	<div class="razd"><div class="d-razd"><center>Название раздела</center></div><div class="dd-razd"><span class="s-razd"><a href="#">Текст</a></span></div><div class="dd-razd"><span class="s-razd"><a href="#">Текст</a></span></div></div>
 
 
 
@@ -50,7 +51,9 @@
 		Текст
 	<div class="z-ct-1"><center>Важное</center></div>
 		Текст
+
 	 </div></div>
+	 <div class="razd"><div class="d-razd"><center>Название раздела</center></div><div class="dd-razd"><span class="s-razd"><a href="#">Текст</a></span></div><div class="dd-razd"><span class="s-razd"><a href="#">Текст</a></span></div></div>
 			
 
 
