--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, user-scalable=no"> <!-- Не дает приближение экрана пальцами -->
 	<title>LeadHelp</title>
 </head>
@@ -19,11 +20,7 @@
 	</header>
 	<!-- Подвал-->
 	<footer>
-		<nav class="footer_nav">
-			<div class="footer-div">
-				<span style="color: #CD853F">By</span><span style="color: #A0522D"> AShalutin</span>
-			</div>
-		</nav>
+		<span style="color: #CD853F">By</span><span style="color: #A0522D"> AShalutin</span>
 	</footer>
 	<!-- Нет подвала -->
 <!-- КОД -->
@@ -42,7 +39,7 @@
 
 	
 	<div class="razd"><div class="d-razd"><center>Название раздела</center></div><div class="dd-razd"><span class="s-razd"><a href="#">Текст</a></span></div><div class="dd-razd"><span class="s-razd"><a href="#">Текст</a></span></div></div>
-	<div class="razd"><div class="d-razd"><center>Название раздела</center></div><div class="dd-razd"><span class="s-razd"><a href="#">Текст</a></span></div><div class="dd-razd"><span class="s-razd"><a href="#">Текст</a></span></div></div>
+	<div class="razd"><div class="d-razd"><center>Название раздела</center></div><div class="dd-razd"><span class="s-razd"><a href="#">Текст привет hello</a></span></div><div class="dd-razd"><span class="s-razd"><a href="#">Текст</a></span></div></div>
 
 
 
@@ -51,7 +48,7 @@
 	<div class="z-ct-1"><center>Важное</center></div>
 		Текст
 	<div class="z-ct-1"><center>Важное</center></div>
-		Текст
+		Текст привет Hello
 
 	 </div></div>
 	 <div class="razd"><div class="d-razd"><center>Название раздела</center></div><div class="dd-razd"><span class="s-razd"><a href="#">Текст</a></span></div><div class="dd-razd"><span class="s-razd"><a href="#">Текст</a></span></div></div>
