--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Kanit&display=swap" rel="stylesheet">
-	<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Kanit:wght@200&display=swap" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, user-scalable=no"> <!-- Не дает приближение экрана пальцами -->
 	<title>LeadHelp</title>
 </head>
@@ -25,7 +23,7 @@
 	<!-- Нет подвала -->
 <!-- КОД -->
 <!--  
-		<div class="razd"><div class="d-razd"><center>Название раздела</center></div><div class="dd-razd"><span class="s-razd"><a href="#">Текст</a> </span></div></div>
+		<div class="razd"><div class="d-razd"><center>Название раздела</center></div><div class="dd-razd"><span class="s-razd"><a href="#">Текст</a></span></div></div>
 		
 		<div class="ct"><div class="z-ct"><center>Важное</center></div> <div class="d-ct"> 
 		Текст
@@ -38,7 +36,7 @@
 <!-- КОД -->
 
 	
-	<div class="razd"><div class="d-razd"><center>Для Администрации</center></div><div class="dd-razd"><span class="s-razd"><a href="#">Вопросы для обзвона (Пока не робит)</a></span></div><div class="dd-razd"><span class="s-razd"><a href="https://docs.google.com/spreadsheets/d/1TL9lG4KXOtm9xS285liXJZUanIWuyNlOkfd0NqTqtow/edit?usp=sharing" target="_blank">Таблица Лидеров</a></span></div><div class="dd-razd"><span class="s-razd"><a href="https://docs.google.com/spreadsheets/d/1VlCT9Qs-u9x0V-nQ0fsl_UIBd31I5anVEoi_Icxq5dM/edit?usp=sharing" target="_blank">Информация для Администрации</a></span></div></div>
+	<div class="razd"><div class="d-razd"><center>Для Администрации</center></div><div class="dd-razd"><span class="s-razd"><a href="razdel/obzvon.html">Вопросы для обзвона (Пока не робит)</a></span></div><div class="dd-razd"><span class="s-razd"><a href="https://docs.google.com/spreadsheets/d/1TL9lG4KXOtm9xS285liXJZUanIWuyNlOkfd0NqTqtow/edit?usp=sharing" target="_blank">Таблица Лидеров</a></span></div><div class="dd-razd"><span class="s-razd"><a href="https://docs.google.com/spreadsheets/d/1VlCT9Qs-u9x0V-nQ0fsl_UIBd31I5anVEoi_Icxq5dM/edit?usp=sharing" target="_blank">Информация для Администрации</a></span></div></div>
 	<div class="razd"><div class="d-razd"><center>информация с форума</center></div><div class="dd-razd"><span class="s-razd"><a href="https://forum.gta-mobile.ru/forums/178/" target="_blank">Раздел лидеров</a></span></div><div class="dd-razd"><span class="s-razd"><a href="https://forum.gta-mobile.ru/forums/189/" target="_blank">Жалобы на сост. гос. орг.</a></span></div><div class="dd-razd"><span class="s-razd"><a href="https://forum.gta-mobile.ru/forums/381/" target="_blank">Общие правила/законопроекты...</a></span></div><div class="dd-razd"><span class="s-razd"><a href="https://forum.gta-mobile.ru/threads/20540/" target="_blank">Правила Гос. лидеров</a> </span></div></div>
 
 
