--- a/razdel/obzvon_frac/FBI_obzvon.html
+++ b/razdel/obzvon_frac/FBI_obzvon.html
@@ -17,9 +17,9 @@
 		</nav>
 	</header>
 	<!-- Подвал-->
-	<footer>
+<!--	<footer>
 		<span style="color: #CD853F">By</span><span style="color: #A0522D"> AShalutin</span>
-	</footer>
+	</footer> -->
 	<!-- Нет подвала -->
 <!-- КОД -->
 
@@ -35,41 +35,164 @@
 			<li>Не помешает ли учеба / Работа, вам стоять на посту лидера?</li>
 		</ul>
 	<div class="z-ct-1"><center>Общее</center></div>
-		<dl class="cts-d">
+		<dl class="cts-d cts-dliz">
 			<dt>Расскажите обязаности лидера.</dt>
-			<dd>лидер обязан поддерживать порядок в чате и на форуме, во фракции в целом.</dd>
-			<dd>лидер обязан держать фракцию на должном уровне и стараться ее максимально развить.</dd>
-			<dd>лидер обязан не допускать блата в своей организации.</dd>
-			<dd>лидер обязан поддерживать интерес к своей организации у игроков и поддерживать онлайн организации.</dd>
-			<dd>лидер обязан помогать освоиться новичкам во фракции или выделить для этого сотрудников.</dd>
-			<dd>лидер обязан иметь стабильный онлайн и вовремя предупреждать о неактиве больше чем в 24 часа</dd>
-			<dd>лидер может находиться на своём посту свыше минимального срока, если у него есть ещё идеи и желание</dd>
-			<dd>во время лидерского срока игрок обязуется играть только на Online RP 03 и только на одном аккаунте</dd>
+			<li>лидер <strong>обязан</strong> поддерживать порядок в чате и на форуме, во фракции в целом.</li>
+			<li>лидер <strong>обязан</strong> держать фракцию на должном уровне и стараться ее максимально развить.</li>
+			<li>лидер <strong>обязан</strong> не допускать блата в своей организации.</li>
+			<li>лидер <strong>обязан</strong> поддерживать интерес к своей организации у игроков и поддерживать онлайн организации.</li>
+			<li>лидер <strong>обязан</strong> помогать освоиться новичкам во фракции или выделить для этого сотрудников.</li>
+			<li>лидер <strong>обязан</strong> иметь стабильный онлайн и вовремя предупреждать о неактиве больше чем в <span style="color: #F0E68C;">24 часа</span></li>
+			<li>лидер может находиться на своём посту <i>свыше минимального срока</i>, если у него есть ещё идеи и желание</li>
+			<li>во время лидерского срока игрок обязуется играть только на Online RP 03 и только на одном аккаунте</li>
 			<dt>Что запрещено лидерам?</dt>
-			<dd>Обманывать Администрацию Сервера.</dd>
-			<dd>Использовать запрещенные cleo.</dd>
-			<dd>Играть с других аккаунтов.</dd>
-			<dd>Запрещен РП сон.</dd>
-			<dd>Запрещено стоять в АФК более 30 минут.</dd>
-			<dt>Какой минимальный онлайн лидера за день?</dt>
-			<dd>2 Часа в день.</dd>
-			<dt>Сколько можно взять неактивов за один срок?</dt>
-			<dd>7 Дней за один срок.</dd>
-			<dt>Разрешён ли РП сон?</dt>
-			<dd>РП сон Запрещен.</dd>
-			<dt>Сколько минимум тем должно быть на форуме?</dt>
-			<dd>1. Руководство Фракции.  2. Система повышения.  3. FAQ - помощь по фракции.</dd>
 		</dl>
+		<dl class="cts-d">
+			<li>Обманывать Администрацию Сервера.</li>
+			<li>Использовать запрещенные cleo.</li>
+			<li>Играть с других аккаунтов.</li>
+			<li>Запрещен РП сон.</li>
+			<li>Запрещено стоять в АФК более 30 минут.</li>
+		</dl>
+		<dl class="cts-d cts-d-op">
+			<dt>Какой минимальный онлайн лидера за день?</dt>
+			<li><span style="color: #F0E68C;">2</span> Часа в день.</li>
+			<dt>Сколько можно взять неактивов за один срок?</dt>
+			<li><span style="color: #F0E68C;">7</span> Дней за один срок.</li>
+			<dt>Разрешён ли РП сон?</dt>
+			<li>РП сон <span style="color: rgb(205, 92, 92, .9);">Запрещен</span>.</li>
+			<dt>Сколько минимум тем должно быть на форуме?</dt>
+			<li><span style="color: #F0E68C;">1.</span> Руководство Фракции.  <span style="color: #F0E68C;">2.</span> Система повышения.  <span style="color: #F0E68C;">3.</span> FAQ - помощь по фракции.</li>
+			<dt>Какой срок Нахождения на лидерстве государственной организации?</dt>
+			<li><span style="color: #F0E68C;">30</span> Дней.</li>
+			<dt>Что будет лидеру за принятие игрока который в ЧС?</dt>
+			<li>Строгий выговор.</li>
+			<dt>Сколько дней есть у лидера на заполнение форума?</dt>
+			<li><span style="color: #F0E68C;">3</span> Дня.</li>
+		</dl>
+	<div class="z-ct-1"><center>Государственная Волна</center></div>
+		<dl class="cts-d cts-dliz">
+			<dt>Расскажите правила подачи Государственной волны.</dt>
+			<li>Запрещен <span style="color: rgb(205, 92, 92, .9);">Metagaming</span> при подачи объявлений.</li>
+			<li>Весь текст должен быть на русском языке.</li>
+			<li>Запрещена любая <span style="color: rgb(205, 92, 92, .9);">реклама</span>.</li>
+			<li>В каждом сообщении необходимо обязательно указать тэг организации, от которой выходит новостной блок.</li>
+			<li>Запрещено использовать разделительные символы.</li>
+			<li>апрещено писать в верхнем регистре <span style="color: rgb(205, 92, 92, .9);">(Caps)</span>.</li>
+			<li>Интервал между сообщениями одного новостного блока должен составлять не менее <span style="color: #F0E68C;">5-ти секунд</span>.</li>
+			<li>Интервал между двумя разными новостными блоками должен быть не менее <span style="color: #F0E68C;">5-ти минут</span>.</li>
+		</dl>
+		<div class="z-ct-1"><center>Волна Департамента</center></div>
+			<dl class="cts-d cts-dliz">
+				<dt>Расскажите правила волны департамента</dt>
+				<li>Запрещен Metagaming в рацию департамента (Расценивается как неадекватное поведение).</li>
+				<li>Запрещено любое общение в рацию департамента.<span style="color: #FF7F50;"> Исключение:</span><span style="color: #FFA07A;"> /d FBI to GOV: Кана Вайт, отпишите мне пожалуйста на номер 882211.</span></li>
+				<li>Запрещено любое разведение конфликтов в рации департамента.</li>
+				<li>Весь текст должен быть на русском языке.</li>
+				<li>В каждом сообщении необходимо обязательно указать тэг своей организации и организации к которой обращаетесь. <span style="color: #FF7F50;">Пример:</span><span style="color: #FFA07A;">/d FBI to GOV: text</span></li>
+				<li>Запрещено писать в верхнем регистре <span style="color: rgb(205, 92, 92, .9);">(Caps)</span>.</li>
+				<li>Разрешена реклама переводов/отрядов/отделов.</li>
+				<dt>Расскажите тэг своей государственной организации</dt>
+				<li style="color: #F0E68C;">FBI</li>
+				<dt>С какого уровня возможен прием в вашу организацию?</dt>
+				<li><span style="color: #F0E68C;">8 lvl</span></li>
+			</dl>
+			<!-- ---------------------------------------------------------------->
+
+		<div class="z-ct-1"><center>Патрулирование в опасном районе</center></div>
+		<dl class="cts-d">
+			<dt>Расскажите Правила Патрулирования в Опасном Районе</dt>
+			<li>Офицеру запрещено заезжать на территорию гетто, если там ведётся <i>война за территорию</i> между бандами.</li>
+			<li>Офицеру ПД строго запрещёно заезжать в опасный район одному <span style="color: #FF7F50;">(без напарника)</span> для патрулирования или проведения каких либо оперативно-розыскных мероприятий.</li>
+			<li>Офицеру ПД строго запрещено заезжать в опасный район на служебном мотоцикле.</li>
+			<li>Во время нахождение в опасном районе в патрульном авто должно находится минимум два Офицера Полицейского Департманта.</li>
+			<li>В том случае, если во время нахождении в опасном районе был потерян напарник, то необходимо сразу же покинуть территорию. <span style="color: #FF7F50;">Исключение</span>: <span style="color: #FFA07A;">Разрешено продолжать патрулирование в том случае, если в служебном авто осталось как минимум два сотрудника.</span></li>
+			<li>Офицеру ПД категорически запрещается выезжать в патруль по Опасному району без необходимой оснащенности: <span style="color: #F0E68C;">( М4, Deagle, Бронежилет, дубинка, маска).</span></li>
+			<li>Если бандит/обычный гражданин в гетто <span style="color: #FFA07A;">скрылся</span> в одну из баз, то вы должны <strong>убедиться</strong> в том, что его дальнейшее преследование не приведет к нарушению правил сервера <span style="color: rgb(205, 92, 92, .9);">(Powergaming)</span>. Если же вы не уверены в этом, то рекомендуется прекратить погоню и объявить в преступника в Федеральный розыск.</li>
+		</dl>
+		<div class="z-ct-1"><center>Правила приема и система переводов</center></div>
+		<dl class="cts-d cts-dliz">
+			<dt>Расскажите правила переводов между государственными организациями</dt>
+		</dl>
+		<div>
+		<table class="perevod">
+			<caption>Правила переводов</caption>
+			<tr><td>Army </td><td>»</td><td>Police Department</td></td>
+			<tr><td>Police Department</td><td>»</td><td>Army</td></tr>
+			<tr><td>Police Department</td><td>»</td><td>Police Department</td></tr>
+		</table>
+		<table class="perevod">
+			<caption>Из Army в PD</caption>
+			<tr><td>Сержант</td><td>»»</td><td>Курсант</td></tr>
+			<tr><td>Прапорщик</td><td>»»</td><td>Офицер I</td></tr>
+			<tr><td>Младший Лейтенант</td><td>»»</td><td>Офицер II</td></tr>
+			<tr><td>Лейтенант</td><td>»»</td><td>Старший офицер</td></tr>
+			<tr><td>Старший Лейтенант</td><td>»»</td><td>Сержант I</td></tr>
+			<tr><td>Капитан</td><td>»»</td><td>Сержант II</td></tr>
+			<tr><td>Майор</td><td>»»</td><td>Детектив I</td></tr>
+			<tr><td>Подполковник</td><td>»»</td><td>Детектив II</td></tr>
+			<tr><td>Полковник</td><td>»»</td><td>Лейтенант</td></tr>
+			<tr><td>Генерал</td><td>»»</td><td>По согласованию с АДМ.</td></tr>
+		</table>
+		<table class="perevod">
+			<caption>Из PD в Army</caption>
+			<tr><td>Старший офицер</td><td>»»</td><td>Младший Сержант</td></tr>
+			<tr><td>Сержант I</td><td>»»</td><td>Сержант</td></tr>
+			<tr><td>Сержант II</td><td>»»</td><td>Сержант</td></tr>
+			<tr><td>Детектив I</td><td>»»</td><td>Прапорщик</td></tr>
+			<tr><td>Детектив II</td><td>»»</td><td>Прапорщик</td></tr>
+			<tr><td>Лейтенант</td><td>»»</td><td>Младший Лейтенант</td></tr>
+			<tr><td>Капитан</td><td>»»</td><td>Лейтенант</td></tr>
+			<tr><td>Майор</td><td>»»</td><td>Старший Лейтенант</td></tr>
+			<tr><td>Заместитель Шерифа</td><td>»»</td><td>Капитан</td></tr>
+			<tr><td>Шериф</td><td>»»</td><td>По согласованию с АДМ.</td></tr>
+		</table>
+		<table class="perevod">
+			<caption>Из PD в PD</caption>
+			<tr><td>Офицер II</td><td>»»</td><td>Офицер I</td></tr>
+			<tr><td>Старший офицер</td><td>»»</td><td>Офицер II</td></tr>
+			<tr><td>Сержант I</td><td>»»</td><td>Старший офицер</td></tr>
+			<tr><td>Сержант II</td><td>»»</td><td>Старший офицер</td></tr>
+			<tr><td>Детектив I</td><td>»»</td><td>Сержант I</td></tr>
+			<tr><td>Детектив II</td><td>»»</td><td>Сержант II</td></tr>
+			<tr><td>Лейтенант</td><td>»»</td><td>Детектив I</td></tr>
+			<tr><td>Капитан</td><td>»»</td><td>Детектив II</td></tr>
+			<tr><td>Майор</td><td>»»</td><td>Лейтенант</td></tr>
+			<tr><td>Заместитель Шерифа</td><td>»»</td><td>Капитан</td></tr>
+			<tr><td>Шериф</td><td>»»</td><td>По согласованию с АДМ.</td></tr>
+		</table>
+		<table class="perevod">
+			<caption>Из FBI в PD</caption>
+			<tr><td>Младший агент</td><td>»»</td><td>Старший офицер</td></tr>
+			<tr><td>Агент</td><td>»»</td><td>Сержант I</td></tr>
+			<tr><td>Старший агент</td><td>»»</td><td>Сержант II</td></tr>
+			<tr><td>Инспектор</td><td>»»</td><td>Детектив I</td></tr>
+			<tr><td>Ректор академии</td><td>»»</td><td>Детектив II</td></tr>
+			<tr><td>Глава Отдела CID</td><td>»»</td><td>Лейтенант</td></tr>
+			<tr><td>Глава отдела JTTF</td><td>»»</td><td>Лейтенант</td></tr>
+			<tr><td>Глава отдела DEP</td><td>»»</td><td>Лейтенант</td></tr>
+			<tr><td>Заместитель Директора</td><td>»»</td><td>Капитан</td></tr>
+			<tr><td>Директор</td><td>»»</td><td>По согласованию с АДМ.</td></tr>
+		</table>
+		</div>
 
 
 
 
 
 
-	<div class="z-ct-1"><center>Важное</center></div>
-		Текст
+
+
+
+
+
+
+
+
+
+
+
 	 </div></div>
-
 
 
 
