--- a/razdel/obzvon_frac/FBI_obzvon.html
+++ b/razdel/obzvon_frac/FBI_obzvon.html
@@ -85,7 +85,7 @@
 		<div class="z-ct-1"><center>Волна Департамента</center></div>
 			<dl class="cts-d cts-dliz">
 				<dt>Расскажите правила волны департамента</dt>
-				<li>Запрещен Metagaming в рацию департамента (Расценивается как неадекватное поведение).</li>
+				<li>Запрещен <span style="color: rgb(205, 92, 92, .9);">Metagaming</span> в рацию департамента <span style="color: #FFA07A;">(Расценивается как неадекватное поведение)</span>.</li>
 				<li>Запрещено любое общение в рацию департамента.<span style="color: #FF7F50;"> Исключение:</span><span style="color: #FFA07A;"> /d FBI to GOV: Кана Вайт, отпишите мне пожалуйста на номер 882211.</span></li>
 				<li>Запрещено любое разведение конфликтов в рации департамента.</li>
 				<li>Весь текст должен быть на русском языке.</li>
@@ -174,11 +174,55 @@
 			<tr><td>Заместитель Директора</td><td>»»</td><td>Капитан</td></tr>
 			<tr><td>Директор</td><td>»»</td><td>По согласованию с АДМ.</td></tr>
 		</table>
+		<table class="perevod">
+			<caption>Из FBI в Army</caption>
+			<tr><td>Агент</td><td>»»</td><td>Прапорщик</td></tr>
+			<tr><td>Старший агент</td><td>»»</td><td>Младший Лейтенант</td></tr>
+			<tr><td>Инспектор</td><td>»»</td><td>Лейтенант</td></tr>
+			<tr><td>Ректор академии</td><td>»»</td><td>Старший Лейтенант</td></tr>
+			<tr><td>Глава Отдела CID</td><td>»»</td><td>Капитан</td></tr>
+			<tr><td>Глава отдела JTTF</td><td>»»</td><td>Капитан</td></tr>
+			<tr><td>Глава отдела DEP</td><td>»»</td><td>Капитан</td></tr>
+			<tr><td>Заместитель Директора</td><td>»»</td><td>Майор</td></tr>
+			<tr><td>Директор</td><td>»»</td><td>По согласованию с АДМ.</td></tr>
+		</table>
 		</div>
-
-
-
-
+		<div class="z-ct-1"><center>Регламент деятельности</center></div>
+		<dl class="cts-d cts-dliz">
+			<dt>Кто из вашей организации имеет право находиться на территории армии?</dt>
+			<li>Агенты FBI в должности Агент и выше <span style="color: #F0E68C;">(4+ ранги)</span>.</li>
+			<li>Агенты FBI в должности Зам. Директора/Директор FBI.</li>
+			<li>Агенты FBI в должности Агент и выше <span style="color: #F0E68C;">(4+ранги)</span> имеют право заезжать на территорию части <strong>только</strong> для проведения следственно-розыскных мероприятий и <strong>только</strong> с разрешения старших офицеров Армии.</li>
+		</dl>
+		<div class="z-ct-1"><center>Уголовный кодекс штата</center></div>
+		<dl class="cts-d cts-d-op">
+			<dt>Пройдемся по Уголовному Кодексу</dt>
+			<li>Какой уровень розыска будет за взяточничество?</li>
+			<dd><span style="color: #FFA07A;">5.2.</span> ВЗЯТОЧНИЧЕСТВО</dd>
+			<li>Какой уровень розыска будет за порчу чужого имущества?</li>
+			<dd><span style="color: #FFA07A;">2.2.</span> ПОРЧА/УНИЧТОЖЕНИЕ ИМУЩЕСТВА</dd>
+			<li>Какой уровень розыска будет за употребление наркотиков?</li>
+			<dd><span style="color: #FFA07A;">2.6.</span> УПОТРЕБЛЕНИЕ НАРКОТИЧЕСКИХ СРЕДСТВ</dd>
+			<li>Что такое ЧСП?</li>
+			<dd>ЧИСТОСЕРДЕЧНОЕ ПРИЗНАНИЕ</dd>
+			<dt>Теперь по Административному Кодексу</dt>
+			<li>Какой штраф За парковку в неположенном месте?</li>
+			<dd><span style="color: rgb(205, 92, 92, .8);">Штраф</span>: <span style="color: lime;">5.000$</span></dd>
+			<li>Какое наказание За посадку воздушного транспорта в неположенном месте?</li>
+			<dd><span style="color: rgb(205, 92, 92, .8);">Штраф</span>: <span style="color: lime;">30.000$</span> и <span style="color: #FFA07A;">изъятие лицензии на воздушный транспорт</span></dd>
+		</dl>
+		<div class="z-ct-1"><center>Должностная структура</center></div>
+		<div>
+			<table class="perevod">
+				<caption>Должностная структура</caption>
+				<tr><td>Инспектор</td><td>»»</td><td>3</td></tr>
+				<tr><td>Ректор академии</td><td>»»</td><td>1</td></tr>
+				<tr><td>Глава отдела CID</td><td>»»</td><td>1</td></tr>
+				<tr><td>Глава отдела JTTF</td><td>»»</td><td>1</td></tr>
+				<tr><td>Глава отдела DEP</td><td>»»</td><td>1</td></tr>
+				<tr><td>Зам директора</td><td>»»</td><td>2</td></tr>
+			</table>
+		</div>
 
 
 
