--- a/razdel/obzvon_frac/FBI_obzvon.html
+++ b/razdel/obzvon_frac/FBI_obzvon.html
@@ -223,8 +223,20 @@
 				<tr><td>Зам директора</td><td>»»</td><td>2</td></tr>
 			</table>
 		</div>
-
-
+		<div class="z-ct-1"><center>Правила повышения сотрудников</center></div>
+		<dl class="cts-d cts-d-op">
+			<dt>Расскажите Правила повышений сотрудников</dt>
+			<li>Ученик академии <span style="color: #FFA07A;">[1]</span></li>
+			<dd>Имеют право повысится на следующий день после призыва сдав необходимые <i>тесты</i> и данные ему <i>задачи</i>.</dd>
+			<li>Стажер <span style="color: #FFA07A;">[2]</span> - Младший агент <span style="color: #FFA07A;">[3]</span></li>
+			<dd><span style="color: #F0E68C;">(включительно)</span> повышаются не чаще, чем <b>один раз в три дня</b>.</dd>
+			<li>Младший агент <span style="color: #FFA07A;">[3]</span> - Старший Агент <span style="color: #FFA07A;">[5]</span></li>
+			<dd><span style="color: #F0E68C;">(включительно)</span> повышаются не чаще, чем <b>один раз в пять дней</b>.</dd>
+			<li>Инспектор <span style="color: #FFA07A;">[6]</span> - Глава отдела DEP <span style="color: #FFA07A;">[10]</span></li>
+			<dd><span style="color: #F0E68C;">(включительно)</span> повышаются не чаще, чем <b>один раз в семь дней</b>.</dd>
+			<li>Зам. Директор <span style="color: #FFA07A;">[11]</span></li>
+			<dd><span style="color: #F0E68C;">(включительно)</span> повышаются не чаще, чем один <b>раз в десять дней</b>.</dd>
+		</dl>
 
 
 
